--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,7 +1,7 @@
 name: generate animation
 
 on:
-  # run automatically every 2 hours
+  # run automatically every day
   schedule:
     - cron: "0 0 * * *" 
   
